<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.personas.Registro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <TextView
            android:text="REGISTRO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/NOMBRE"
            android:ems="10"
            android:id="@+id/txtnombre"
            android:layout_weight="0.05" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Apellido"
            android:ems="10"
            android:id="@+id/txtapellido"
            android:layout_weight="0.05" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtedad"
            android:layout_weight="0.05"
            android:text="Edad" />

        <CheckBox
            android:text="@string/Bailar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkbailar"
            android:layout_weight="0.05"
            android:checked="true" />

        <CheckBox
            android:text="@string/Leer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkleer"
            android:layout_weight="0.05" />

        <CheckBox
            android:text="@string/Programar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkprogramar"
            android:layout_weight="0.05" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/Registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdregistrar"
                android:layout_weight="1" />

            <Button
                android:text="@string/Borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdborrar"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
